pathing and swagger updates
