# Controllers/index.js
@@ -2,7 +2,7 @@ const mongodb = require('../Database/mongodbconnect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res, next) => {
-  const result = await mongodb.getDb().db("Week2").collection('Contacts').find({});
+  const result = await mongodb.getDb().db("Games").collection('games').find({});
   console.log(result);
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
@@ -14,8 +14,8 @@ const getSingle = async (req, res, next) => {
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
-    .db("Week2")
-    .collection('Contacts')
+    .db("Games")
+    .collection('games')
     .find({ _id: userId });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
@@ -23,15 +23,17 @@ const getSingle = async (req, res, next) => {
   });
 };
 
-const createContact = async (req, res) => {
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+const createGame = async (req, res) => {
+  const game = {
+    title: req.body.title,
+    releasedate: req.body.releasedate,
+    developer: req.body.developer,
+    publisher: req.body.publisher,
+    rating: req.body.rating,
+    played: req.body.played,
+    score: req.body.score
   };
-  const response = await mongodb.getDb().db("Week2").collection('Contacts').insertOne(contact);
+  const response = await mongodb.getDb().db("Games").collection('games').insertOne(game);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
@@ -39,16 +41,18 @@ const createContact = async (req, res) => {
   }
 };
 
-const updateContact = async (req, res) => {
+const updateGame = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+  const game = {
+    title: req.body.title,
+    releasedate: req.body.releasedate,
+    developer: req.body.developer,
+    publisher: req.body.publisher,
+    rating: req.body.rating,
+    played: req.body.played,
+    score: req.body.score
   };
-  const response = await mongodb.getDb().db("Week2").collection('Contacts').replaceOne({ _id: userId }, contact);
+  const response = await mongodb.getDb().db("Games").collection('games').replaceOne({ _id: userId }, game);
   console.log(response);
   if (response.modifiedCount > 0) {
     res.status(204).send();
@@ -57,9 +61,9 @@ const updateContact = async (req, res) => {
   }
 };
 
-const deleteContact = async (req, res) => {
+const deleteGame = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db("Week2").collection('Contacts').remove({ _id: userId }, true);
+  const response = await mongodb.getDb().db("Games").collection('games').remove({ _id: userId }, true);
   console.log(response);
   if (response.deletedCount > 0) {
     res.status(204).send();
@@ -68,4 +72,4 @@ const deleteContact = async (req, res) => {
   }
 };
 
-module.exports = { getAll, getSingle, createContact, updateContact, deleteContact };
+module.exports = { getAll, getSingle, createGame, updateGame, deleteGame };
