# Routes/games.js
@@ -7,10 +7,10 @@ router.get('/', contactsController.getAll);
 
 router.get('/:id', contactsController.getSingle);
 
-router.post('/', contactsController.createContact);
+router.post('/', contactsController.createGame);
 
-router.put('/:id', contactsController.updateContact);
+router.put('/:id', contactsController.updateGame);
 
-router.delete('/:id', contactsController.deleteContact);
+router.delete('/:id', contactsController.deleteGame);
 
 module.exports = router;
