# Routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'));
+router.use('/games', require('./games'));
 
 module.exports = router;
